--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@theatre/studio": "^0.7.2",
     "@types/eslint": "^9.6.0",
-    "@types/three": "^0.172.0",
+    "@types/three": "^0.173.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^10.0.1",
@@ -41,12 +41,13 @@
   "dependencies": {
     "@dimforge/rapier3d-compat": "^0.14.0",
     "@theatre/core": "^0.7.2",
-    "@threlte/core": "^8.0.0-next.41",
-    "@threlte/extras": "^9.0.0-next.54",
-    "@threlte/flex": "^2.0.0-next.15",
-    "@threlte/rapier": "^3.0.0-next.20",
-    "@threlte/theatre": "^3.0.0-next.11",
-    "@threlte/xr": "^1.0.0-next.16",
-    "three": "^0.172.0"
+    "@threlte/core": "^8.0.1",
+    "@threlte/extras": "^9.0.1",
+    "@threlte/flex": "^2.0.0",
+    "@threlte/rapier": "^3.0.0",
+    "@threlte/studio": "^0.1.3",
+    "@threlte/theatre": "^3.0.0",
+    "@threlte/xr": "^1.0.0",
+    "three": "^0.173.0"
   }
 }
