--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@threlte/studio": "^0.1.3",
     "@threlte/theatre": "^3.0.0",
     "@threlte/xr": "^1.0.0",
+    "@vercel/speed-insights": "^1.2.0",
     "three": "^0.173.0"
   }
 }
